css/theStyle.css
/* global variables */
:root {
    /* color */
    --backgroundColor: black;
    --evilDarkGray: #666;       /* dark gray */

    /* video dimensions */
    --videoWidth: 100%;
    --videoHeight: calc(var(--videoWidth) * 9/16);
    --minVideoWidth: 400px;

    /* border parameters */
    --borderThickness: 2px;
    --borderColor: white;
}

* {
    margin: 0;
	box-sizing: border-box;
}

.row::after {
	content: "";
	clear: both;
	display: table;
}

[class*="col-"] {
	float: left;
	padding: 15px;
}

/* types */

body {
	background: var(--backgroundColor);
}

li {
    display: inline;
    margin-top: 0;
    margin-left: 10px;
    padding-top: 0;
    padding-right: 10px;
    /*border-right: 1px solid gray;*/
    color: black;
}
li:hover {
    color: white;
}

a {
    text-decoration: none;
    color: black;
}
a:hover {
    color: white;
}

/* classes */



/* ids */

#topBar {
	height: 50px;
	display: flex;
	/*justify-content: center;*/
    border-bottom: 1px solid black;
	background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
	font-family: Verdana, sans-serif;
}

#menu {
	height: 80%;
    width: auto;
	align-self: center;
	/*vertical-align: middle;*/
	/*height: 18px;*/
	cursor: pointer;
}

#navigation {
    display: none;
}

#home, #media {
    border-right: 1px solid gray;
}

/* For mobile phones: */
[class*="col-"] {
    width: 100%;
}

@media only screen and (min-width: 600px) {
    /* For tablets: */
    .col-m-1 {width: 8.33%;}
    .col-m-2 {width: 16.66%;}
    .col-m-3 {width: 25%;}
    .col-m-4 {width: 33.33%;}
    .col-m-5 {width: 41.66%;}
    .col-m-6 {width: 50%;}
    .col-m-7 {width: 58.33%;}
    .col-m-8 {width: 66.66%;}
    .col-m-9 {width: 75%;}
    .col-m-10 {width: 83.33%;}
    .col-m-11 {width: 91.66%;}
    .col-m-12 {width: 100%;}
}

@media only screen and (min-width: 768px) {
    /* For desktop: */
    .col-1 {width: 8.33%;}
    .col-2 {width: 16.66%;}
    .col-3 {width: 25%;}
    .col-4 {width: 33.33%;}
    .col-5 {width: 41.66%;}
    .col-6 {width: 50%;}
    .col-7 {width: 58.33%;}
    .col-8 {width: 66.66%;}
    .col-9 {width: 75%;}
    .col-10 {width: 83.33%;}
    .col-11 {width: 91.66%;}
    .col-12 {width: 100%;}
}

@media only screen and (orientation: landscape) {
    body {
        /*background-color: white;*/
    }
}

